# Glenski-MCPs

./: .gitignore  README.md
.github/workflows/: test.yml
glenski-web-research-mcp/: README.md  pyproject.toml  requirements.txt  server.py
glenski-web-research-mcp/assets/: build-og-card.py
glenski-web-research-mcp/tests/: test_server.py
