[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "glenski-web-research-mcp"
version = "2.2.0"
description = "API-free web research MCP server using DuckDuckGo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-4.0" }
authors = [{ name = "Glen E. Grant", email = "glen@glenegrant.com" }]
dependencies = [
  "mcp>=1.9,<2",
  "ddgs>=9,<10",
  "httpx>=0.27,<1",
  "beautifulsoup4>=4.12,<5",
  "cryptography<49; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
glenski-web-research = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
